continued quantum kernel notebook with full kernel matrix example - 2

--- a/quantum-computing-tools/Qiskit/999-2-Quantum-Kernel-Method.ipynb
+++ b/quantum-computing-tools/Qiskit/999-2-Quantum-Kernel-Method.ipynb
@@ -662,8 +662,19 @@
     "* How is the accuracy affected by increasing/descreasing the amoiunt of training data?\n",
     "* What feature maps can you use and how do the results vary with feature maps?\n",
     "* How are the accuracy and running time affected by increasing the number of features?\n",
-    "* Which trends, if any, do you expect to hold on real quantum computers?\n"
+    "* Which trends, if any, do you expect to hold on real quantum computers?\n",
+    "\n",
+    "# Scaling to more features and qubits\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb939a14-d8a3-4579-b9a7-b728a0b92309",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
