finished quantum kernel method notebook

--- a/quantum-computing-tools/Qiskit/999-2-Quantum-Kernel-Method.ipynb
+++ b/quantum-computing-tools/Qiskit/999-2-Quantum-Kernel-Method.ipynb
@@ -665,13 +665,464 @@
     "* Which trends, if any, do you expect to hold on real quantum computers?\n",
     "\n",
     "# Scaling to more features and qubits\n",
-    "\n"
+    "\n",
+    "In the following, we will scale the above single matrix element to more features and qubits. \n",
+    "\n",
+    "## Step 1: Map classical inputs to a quantum problem\n",
+    "\n",
+    "Each data point has 42 features, and we consider two data points with categorial variables $\\pm 1$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "bb939a14-d8a3-4579-b9a7-b728a0b92309",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Two mock data points, including category labels, as in training\n",
+    " \n",
+    "large_data = [\n",
+    "    [\n",
+    "        -0.028,\n",
+    "        -1.49,\n",
+    "        -1.698,\n",
+    "        0.107,\n",
+    "        -1.536,\n",
+    "        -1.538,\n",
+    "        -1.356,\n",
+    "        -1.514,\n",
+    "        -0.109,\n",
+    "        -1.8,\n",
+    "        -0.122,\n",
+    "        -1.651,\n",
+    "        -1.955,\n",
+    "        -0.123,\n",
+    "        -1.732,\n",
+    "        0.091,\n",
+    "        -0.048,\n",
+    "        -0.128,\n",
+    "        -0.026,\n",
+    "        0.082,\n",
+    "        -1.263,\n",
+    "        0.065,\n",
+    "        0.004,\n",
+    "        -0.055,\n",
+    "        -0.08,\n",
+    "        -0.173,\n",
+    "        -1.734,\n",
+    "        -0.39,\n",
+    "        -1.451,\n",
+    "        0.078,\n",
+    "        -1.578,\n",
+    "        -0.025,\n",
+    "        -0.184,\n",
+    "        -0.119,\n",
+    "        -1.336,\n",
+    "        0.055,\n",
+    "        -0.204,\n",
+    "        -1.578,\n",
+    "        0.132,\n",
+    "        -0.121,\n",
+    "        -1.599,\n",
+    "        -0.187,\n",
+    "        -1,\n",
+    "    ],\n",
+    "    [\n",
+    "        -1.414,\n",
+    "        -1.439,\n",
+    "        -1.606,\n",
+    "        0.246,\n",
+    "        -1.673,\n",
+    "        0.002,\n",
+    "        -1.317,\n",
+    "        -1.262,\n",
+    "        -0.178,\n",
+    "        -1.814,\n",
+    "        0.013,\n",
+    "        -1.619,\n",
+    "        -1.86,\n",
+    "        -0.25,\n",
+    "        -0.212,\n",
+    "        -0.214,\n",
+    "        -0.033,\n",
+    "        0.071,\n",
+    "        -0.11,\n",
+    "        -1.607,\n",
+    "        0.441,\n",
+    "        -0.143,\n",
+    "        -0.009,\n",
+    "        -1.655,\n",
+    "        -1.579,\n",
+    "        0.381,\n",
+    "        -1.86,\n",
+    "        -0.079,\n",
+    "        -0.088,\n",
+    "        -0.058,\n",
+    "        -1.481,\n",
+    "        -0.064,\n",
+    "        -0.065,\n",
+    "        -1.507,\n",
+    "        0.177,\n",
+    "        -0.131,\n",
+    "        -0.153,\n",
+    "        0.07,\n",
+    "        -1.627,\n",
+    "        0.593,\n",
+    "        -1.547,\n",
+    "        -0.16,\n",
+    "        -1,\n",
+    "    ],\n",
+    "]\n",
+    "train_data = [large_data[0][:-1], large_data[1][:-1]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c13cb56-f635-4353-94f0-f7397b662037",
+   "metadata": {},
+   "source": [
+    "Let's first try using the `zz_feature_map` and check how deep the circuit will get:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2179f75b-c086-497c-98ed-dcdd67f1a91a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qiskit.circuit.library import zz_feature_map\n",
+    " \n",
+    "fm = zz_feature_map(\n",
+    "    feature_dimension=np.shape(train_data)[1], entanglement=\"linear\", reps=1\n",
+    ")\n",
+    " \n",
+    "unitary1 = fm.assign_parameters(train_data[0])\n",
+    "unitary2 = fm.assign_parameters(train_data[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "de6fa78e-c001-44bd-88ca-4c21a3c5e467",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "circuit depth =  251\n",
+      "two-qubit depth 165\n"
+     ]
+    }
+   ],
+   "source": [
+    "from qiskit.circuit.library import unitary_overlap\n",
+    " \n",
+    " \n",
+    "overlap_circ = unitary_overlap(unitary1, unitary2)\n",
+    "overlap_circ.measure_all()\n",
+    " \n",
+    "print(\"circuit depth = \", overlap_circ.decompose(reps=2).depth())\n",
+    "print(\n",
+    "    \"two-qubit depth\",\n",
+    "    overlap_circ.decompose().depth(lambda instr: len(instr.qubits) > 1),\n",
+    ")\n",
+    "# overlap_circ.draw(\"mpl\", scale=0.6, style=\"iqp\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b91c4a39-10c2-43c7-b292-79feb2d8d3ee",
+   "metadata": {},
+   "source": [
+    "A circuit depth over 200 for two qubits seems to be a big warning, even before transpiling. That's not a promising start and won't scale well. We should think about a new encoding (entanglement) map that is better applicable to the structure of our data. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "34304ca8-8711-45f4-b6f7-350b9aea1e40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qiskit.circuit import Parameter, ParameterVector, QuantumCircuit\n",
+    " \n",
+    "# Prepare feature map for computing overlap\n",
+    " \n",
+    "entangler_map = [\n",
+    "    [3, 4],\n",
+    "    [2, 5],\n",
+    "    [1, 4],\n",
+    "    [2, 3],\n",
+    "    [4, 6],\n",
+    "    [7, 9],\n",
+    "    [10, 11],\n",
+    "    [9, 12],\n",
+    "    [8, 11],\n",
+    "    [9, 10],\n",
+    "    [11, 13],\n",
+    "    [14, 16],\n",
+    "    [17, 18],\n",
+    "    [16, 19],\n",
+    "    [15, 18],\n",
+    "    [16, 17],\n",
+    "    [18, 20],\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b9e95218-df60-413a-bc91-1c3c6c75a896",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the entangler map above to build a feature map\n",
+    " \n",
+    "num_features = np.shape(train_data)[1]\n",
+    "num_qubits = int(num_features / 2)\n",
+    " \n",
+    "fm = QuantumCircuit(num_qubits)\n",
+    "training_param = Parameter(\"θ\")\n",
+    "feature_params = ParameterVector(\"x\", num_qubits * 2)\n",
+    "fm.ry(training_param, fm.qubits)\n",
+    "for cz in entangler_map:\n",
+    "    fm.cz(cz[0], cz[1])\n",
+    "for i in range(num_qubits):\n",
+    "    fm.rz(-2 * feature_params[2 * i + 1], i)\n",
+    "    fm.rx(-2 * feature_params[2 * i], i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "acd504d5-a6df-410c-909b-9c68573f592c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qiskit.circuit.library import unitary_overlap\n",
+    " \n",
+    "# Assign features of each data point to a unitary, an instance of the general feature map.\n",
+    " \n",
+    "unitary1 = fm.assign_parameters(list(train_data[0]) + [np.pi / 2])\n",
+    "unitary2 = fm.assign_parameters(list(train_data[1]) + [np.pi / 2])\n",
+    " \n",
+    "# Create the overlap circuit\n",
+    " \n",
+    "overlap_circ = unitary_overlap(unitary1, unitary2)\n",
+    "overlap_circ.measure_all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5e92749-5d75-48d1-adb7-2360f4ccc21c",
+   "metadata": {},
+   "source": [
+    "## Step 2: Optimize problem for quantum execution\n",
+    "\n",
+    "Use the least busy backend:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c2e2c173-347a-4c8a-8bc1-5012a06b5621",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "management.get:WARNING:2026-02-05 18:24:35,200: Loading default saved account\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<IBMBackend('ibm_fez')>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import needed packages\n",
+    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit_ibm_runtime import QiskitRuntimeService\n",
+    " \n",
+    "# Get the least busy backend\n",
+    "service = QiskitRuntimeService()\n",
+    "backend = service.least_busy(\n",
+    "    operational=True, simulator=False, min_num_qubits=fm.num_qubits\n",
+    ")\n",
+    "print(backend)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ea8247c-8ea6-4301-b9df-669151b10f2a",
+   "metadata": {},
+   "source": [
+    "On small-scale jobs, the preset pass manager will often return the same circuit with the same depth, reliably. On larger scale jobs, the transpilation of the complex circuits might return different circuits each time. Hence, it is useful to transpile several time and pick the shallowest circuit:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "9ce4e6f5-344f-44f3-9f06-c1a83a80e653",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "circuit depth =  43\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Apply level 3 optimization to our overlap circuit\n",
+    "transpiled_qcs = []\n",
+    "transpiled_depths = []\n",
+    "transpiled_twoqubit_depths = []\n",
+    "for i in range(1, 20):\n",
+    "    pm = generate_preset_pass_manager(optimization_level=3, backend=backend)\n",
+    "    overlap_ibm = pm.run(overlap_circ)\n",
+    "    transpiled_qcs.append(overlap_ibm)\n",
+    "    transpiled_depths.append(overlap_ibm.decompose().depth())\n",
+    "    transpiled_twoqubit_depths.append(\n",
+    "        overlap_ibm.decompose().depth(lambda instr: len(instr.qubits) > 1)\n",
+    "    )\n",
+    " \n",
+    "print(\"circuit depth = \", overlap_ibm.decompose().depth())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "571f06f5-881b-436e-aefd-48304a914778",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[43, 43, 43, 43, 43, 43, 43, 43, 43, 43, 43, 43, 43, 43, 43, 43, 43, 43, 43]\n",
+      "[7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(transpiled_depths)\n",
+    "print(transpiled_twoqubit_depths)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76aa3bbc-60d0-494d-a7ba-dc1728d20e73",
+   "metadata": {},
+   "source": [
+    "Well, in our case there is no difference in between the 20 runs. So we can choose any of the runs. Let's stick with the first one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "4e517c9a-e0d6-448d-b8b0-c0370a50c17c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "overlap_ibm = transpiled_qcs[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a25e6305-5a80-48d7-82d3-bc18fcf6fb18",
+   "metadata": {},
+   "source": [
+    "## Step 3: Execute using Qiskit Runtime Primitives\n",
+    "\n",
+    "Let's run it on a real quantum computer:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "da69d6c8-1eec-46e2-8239-0a5a2fad0959",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run on ibm_osaka, 7-12-24, required 22 sec.\n",
+    " \n",
+    "# Import our runtime primitive\n",
+    "from qiskit_ibm_runtime import SamplerV2 as Sampler\n",
+    " \n",
+    "# Open a Runtime session:\n",
+    "# ONLY ALLOWED IN PAID PLAN\n",
+    "# session = Session(backend=backend)\n",
+    "num_shots = 10000\n",
+    "# Use sampler and get the counts\n",
+    " \n",
+    "sampler = Sampler(mode=backend)\n",
+    "options = sampler.options\n",
+    "options.dynamical_decoupling.enable = True\n",
+    "options.twirling.enable_gates = True\n",
+    "counts = (\n",
+    "    sampler.run([overlap_ibm], shots=num_shots).result()[0].data.meas.get_int_counts()\n",
+    ")\n",
+    " \n",
+    "# Close session after done\n",
+    "# session.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "327f4682-885f-49ba-ab71-0be7cc6e4866",
+   "metadata": {},
+   "source": [
+    "## Step 4: Post-process, return result in classical format\n",
+    "\n",
+    "Let's see what the probability is for measuring the all zero state $|00000\\rangle$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "e52f9207-ba8c-47bc-9f0c-de4edb268df2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0492"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counts.get(0, 0.0) / num_shots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc833fd1-f228-4872-a610-7138d34471c8",
+   "metadata": {},
+   "source": [
+    "We could repeat this process for single kernel matrix elements between other data pairs to obtain the full kernel matrix. It is determined by the number of data points. So it scales with the number of data points, not with the number of features.\n",
+    "\n",
+    "### Scaling and future work\n",
+    "\n",
+    "The kernel method requires that we measure $|0\\rangle$ as accurately as possible. But gate errors and readout errors mean that there is some non-zero probability $p$ that any given qubit will be erroneaously measured to be in $|1\\rangle$. For many features encoded on $N$ bits, the probability of measuring correctly scales like $(1-p)^N$. For large $N$ the method becomes less and less reliable. Overcoming this difficulty is part of current research"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb939a14-d8a3-4579-b9a7-b728a0b92309",
+   "id": "1c304e9d-fa7e-4d5a-9235-259d918a54b0",
    "metadata": {},
    "outputs": [],
    "source": []
